force-app/main/default/objects/phsOnboardingUserAnswer__c/phsOnboardingUserAnswer__c.object-meta.xml
<CustomObject>
    <label>phsOnboardingUserAnswer</label>
    <nameField>
        <label>phsOnboardingUserAnswer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsOnboardingUserAnswer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>