force-app/main/default/objects/phsOnboardingUserAnswer__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>phsOnboardingUserAnswer</relationshipLabel>
    <relationshipName>phsOnboardingUserAnswer</relationshipName>
    <type>Lookup</type>
</CustomField>