force-app/main/default/objects/phsOnboardingUserAnswer__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionId</label>
    <referenceTo>phsUserOnboardingQuestion__c</referenceTo>
    <relationshipLabel>phsOnboardingUserAnswer</relationshipLabel>
    <relationshipName>phsOnboardingUserAnswer</relationshipName>
    <type>Lookup</type>
</CustomField>