force-app/main/default/objects/phsOnboardingUserAnswer__c/fields/UserAnswer__c.field-meta.xml
<CustomField>
    <fullName>UserAnswer__c</fullName>
    <label>UserAnswer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>