force-app/main/default/objects/phsOnboardingUserAnswer__c/fields/UserAnswerId__c.field-meta.xml
<CustomField>
    <fullName>UserAnswerId__c</fullName>
    <label>UserAnswerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>